# DdsJs

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
Compiler/: ddsjs_idl.bat  ddsjs_idl.sh
DdsJs/: Arrays.hh  BuiltinTopicKey.hh  ConstructorRegistry.cpp  ConstructorRegistry.hh  CppBackingInstance.hh  DataReaderQos.hh  DataReaderWrap.hh  DataWriterQos.cpp  DataWriterQos.hh  DataWriterWrap.cpp  DataWriterWrap.hh  DdsJs.hh  DdsModule.cpp  DdsModule.hh  DeadlineQosPolicy.cpp  DeadlineQosPolicy.hh  DestinationOrderQosPolicy.cpp  DestinationOrderQosPolicy.hh  DestinationOrderQosPolicyKind.hh  DomainParticipantFactoryQos.cpp  DomainParticipantFactoryQos.hh  DomainParticipantQos.cpp  DomainParticipantQos.hh  DomainParticipantWrap.cpp  DomainParticipantWrap.hh  DottedName.cpp  DottedName.hh  DurabilityQosPolicy.hh  DurabilityQosPolicyKind.hh  DurabilityServiceQosPolicy.hh  Duration.hh  EntityFactoryQosPolicy.hh  GroupDataQosPolicy.cpp  GroupDataQosPolicy.hh  HistoryQosPolicy.hh  HistoryQosPolicyKind.hh  InstanceHandle.hh  InstanceStateKind.hh  JsWrapperInstanceRef.cpp  JsWrapperInstanceRef.hh  (+81 more)
DdsJs/Providers/: CoreDX.hh
DdsJs/Providers/CoreDX/: Arrays.hh  CoreDX.hh  (+135 more)
cmake-js/: DdsJsUtilities.cmake
cmake/Modules/: CoreDXTargetIDLSources.cmake  FindANTLR4.cmake  FindCommonsCLI.cmake  FindCoreDX.cmake  FindNodeJs.cmake  FindST.cmake  GuessEndianness.cmake  TargetIDLSources.cmake
cmake_local/: DdsJsConfig.cmake.in
cmake_local/DdsJs/: AddNodeJsModuleTarget.cmake  ConfigureFileScript.cmake  DdsJsConfig.cmake  MakeScriptExecutable.cmake
examples/: CMakeLists.txt  HostMonitor.idl  dpf_test_pub.js  dpf_test_sub.js  ff_test_pub.js  ff_test_sub.js  index.js  oi_test_pub.js  oi_test_sub.js  package.json
examples/cmake/: CoreDXTargetIDLSources.cmake  CycloneDDSTargetIDLSources.cmake  FindCoreDX.cmake  TargetIDLSources.cmake
src/: config.ts  cpp-gen-cmdline.ts  dds-js-idl.ts  ddsjs-idl-types.ts  idlproc.ts  index.ts  type-gen-cmdline.ts  utils.ts
src-old/: config.ts  ddsjs-idl.ts
src-old/codegen/: addon-main-header.ts  counterpart-type.ts  cpp-name-gen.ts  data-writer-wrap-header.ts  destination-folder.ts  handlebars-helpers.ts  header-dependency.ts  idl-module-info.ts  provider-headers.ts  type-alias-proxy-header.ts  union-proxy-header.ts
src-old/model/: codec-proxy.ts  container-registry.ts  container-search-scope.ts  cpp-instance-wrap.ts  data-reader-instance-wrap.ts  data-writer-instance-wrap.ts  index.ts  module-bundle.ts  owned-codec-proxy.ts  scope-container.ts  union-codec-proxy.ts
src-old/parser/: DdsJsIdl.g4  DdsJsIdl.interp  DdsJsIdl.tokens  DdsJsIdlLexer.interp  DdsJsIdlVisitor.ts
src-old/preproc/: index.ts  preproccmd.ts  srcinput.ts
src-old/typegen/: index.ts  struct-type-decl.ts  type-decl-content.ts  type-decl-file.ts  union-type-decl.ts
src/codegen/: addon-main-header.ts  addon-main-implementation.ts  cmake-js-module.ts  counterpart-type.ts  cpp-name-gen.ts  data-reader-wrap-header.ts  data-reader-wrap-implementation.ts  data-writer-wrap-header.ts  data-writer-wrap-implementation.ts  enum-proxy-header.ts  enum-proxy-implementation.ts  header-file.ts  implementation-file.ts  index.ts  module-bundle-header.ts  module-bundle-implementation.ts  proxy-name-gen.ts  seq-proxy-gen.ts  struct-proxy-header.ts  struct-proxy-implementation.ts  template-generated-source.ts  type-alias-proxy-header.ts  type-support-wrap-header.ts  type-support-wrap-implementation.ts  union-proxy-header.ts  union-proxy-implementation.ts
src/dds-addon-codegen/: config.ts  destination-folder.ts  generate.ts  index.ts
src/dds-addon-typegen/: config.ts  generate.ts  index.ts
src/dds-idl-compiler/: DdsIdl.g4  compile.ts  config.ts  idlproc.ts  index.ts
src/model/: addon.ts  built-in-proxies.ts  constant-definition.ts  cpp-instance-wrap.ts  data-reader-instance-wrap.ts  data-writer-instance-wrap.ts  enum-codec-proxy.ts  module-bundle.ts  owned-codec-proxy.ts  scope-member.ts  scoped-name.ts  struct-codec-proxy.ts  type-alias-codec-proxy.ts  type-support-instance-wrap.ts  union-codec-proxy.ts
src/parser/: DdsJsIdlLexer.ts  DdsJsIdlParser.ts  error-listener.ts  index.ts  interpret.ts
src/preproc/: locinfo.ts  preprocline.ts  procresult.ts
src/typegen/: alias-type-decl.ts  const-type-decl.ts  dr-wrap-type-decl.ts  dw-wrap-type-decl.ts  enum-type-decl.ts  hb-partial-template.ts  module-type-decl.ts  ts-wrap-type-decl.ts  type-decl-file.ts
templates/: addon-main.hh.handlebars  build-sys-module.cmake.handlebars  data-reader-wrap.cpp.handlebars  data-reader-wrap.hh.handlebars  enum-proxy.cpp.handlebars  enum-proxy.hh.handlebars  struct-codec.cpp.handlebars  struct-codec.hh.handlebars  type-support-wrap.cpp.handlebars  types.d.ts.handlebars
templates-old/CoreDX/: addon-main.cpp.handlebars  addon-main.hh.handlebars  data-reader-wrap.cpp.handlebars  data-writer-wrap.hh.handlebars  enum-proxy.cpp.handlebars  struct-codec.cpp.handlebars  struct-codec.hh.handlebars  type-support-wrap.cpp.handlebars  type-support-wrap.hh.handlebars
templates/CoreDX/: addon-main.cpp.handlebars  data-writer-wrap.cpp.handlebars  enum-proxy.hh.handlebars  module.cpp.handlebars  module.hh.handlebars  struct-codec.hh.handlebars  type-alias.hh.handlebars  type-support-wrap.hh.handlebars  union-codec.cpp.handlebars  union-codec.hh.handlebars
templates/cpp/: addon-main.cpp.handlebars  addon-main.hh.handlebars  build-sys-module.cmake.handlebars  data-reader-wrap.cpp.handlebars  data-reader-wrap.hh.handlebars  data-writer-wrap.cpp.handlebars  data-writer-wrap.hh.handlebars  enum.cpp.handlebars  enum.hh.handlebars  module.cpp.handlebars  module.hh.handlebars  struct.cpp.handlebars  struct.hh.handlebars  type-alias.hh.handlebars  type-support-wrap.cpp.handlebars  type-support-wrap.hh.handlebars  union.cpp.handlebars  union.hh.handlebars
templates/partials/: alias-ns.partial.handlebars  const-ns.partial.handlebars  dw-ns.partial.handlebars  struct-ns.partial.handlebars  submod-ns.partial.handlebars
templates/ts/: types.d.ts.handlebars
(+384 files in other folders)
